--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,9 +30,6 @@ body{
         height: 100vh;
         position: relative;
 
-        .navbar{
-
-        }
         .content_box{
             max-width: 720px;
             padding: 16px;
@@ -41,6 +38,7 @@ body{
             top: 50%;
             left: 50%;
             transform: translate(-80%, -50%);
+            transition: all ease .5s;
             
             @media(max-width: 1024px){
                 padding: 0;
@@ -52,6 +50,8 @@ body{
             
             .upTitle{
                 font-size: 32px;
+                font-weight: 400;
+                letter-spacing: 4px;
                 
                 @media(max-width: 768px){
                     text-align: center;
@@ -68,6 +68,10 @@ body{
             .description{
                 margin-bottom: 32px;
                 text-align: justify;
+
+                strong{
+                    letter-spacing: 2px;
+                }
             }
             
             .btn_box{
@@ -101,6 +105,14 @@ body{
                         color: #fff;
                     }
                 }
+            }
+        }
+        .hidden{
+            transform: translate(-80%, 720px);
+            opacity: 0;
+
+            @media(max-width: 768px){
+                transform: translate(-50%, 720px);
             }
         }
     }
