--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body{
             top: 50%;
             left: 50%;
             transform: translate(-80%, -50%);
-            transition: all ease .5s;
+            transition: all ease 1s;
             
             @media(max-width: 1024px){
                 padding: 0;
@@ -46,6 +46,7 @@ body{
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
+                transition: all ease .4s;
             }
             
             .upTitle{
@@ -71,9 +72,10 @@ body{
 
                 strong{
                     letter-spacing: 2px;
+                    cursor: pointer;
                 }
             }
-            
+
             .btn_box{
                 display: flex;
                 gap: 16px;
@@ -87,6 +89,7 @@ body{
                     padding: 8px 32px;
                     border: solid 2px #fff;
                     font-size: 16px;
+                    cursor: pointer;
                     transition: all ease .3s;
                     
                     &:hover{
@@ -107,12 +110,27 @@ body{
                 }
             }
         }
+        .sobreMim{
+            width: 90%;
+
+            .upTitle{
+                font-size: 24px;
+                margin-bottom: 16px;
+            }
+            .description_box{
+                margin-bottom: 16px;
+
+                .description{
+                    margin-bottom: 8px;
+                }
+            }
+        }
         .hidden{
-            transform: translate(-80%, 720px);
+            transform: translate(-80%, 144px);
             opacity: 0;
 
             @media(max-width: 768px){
-                transform: translate(-50%, 720px);
+                transform: translate(-50%, 144px);
             }
         }
     }
