--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,7 +70,7 @@ body{
                 strong{
                     letter-spacing: 2px;
                     background-color: rgba($color: white, $alpha: 0.4);
-                    padding: 1px 2px;
+                    padding: 0 2px;
                     border-radius: 4px;
                     cursor: pointer;
                 }
@@ -166,21 +166,18 @@ body{
                 }
 
                 .projeto{
-                    max-width: 50vh;
+                    max-width: 25vh;
                     transition: all ease .3s;
                     text-shadow: 0 0 10 #000;
-                    
-                    a{
-                        text-decoration: none;
 
                         img{
-                            max-width: 100%;
-                            border-radius: 4px;
+                            max-width: 280px;
+                            width: 100%;
+                            border: white solid 2px;
+                            border-radius: 8px;
+                            box-shadow: 0 0 4 white;
                         }
-                        p{
-                            margin: 0 auto;
-                        }
-                    }
+
                     &:hover{
                         transform: scale(1.04);
                     }
