--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@ body{
 
     .container{
         height: 100vh;
+        max-height: 94vh;
         position: relative;
 
         .content_box{
@@ -39,7 +40,7 @@ body{
             transition: all ease 1s;
             
             @media(max-width: 1024px){
-                padding: 16px 0;
+                padding: 0;
                 transform: translate(-50%, -50%);
                 transition: all ease .4s;
             }
