--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,8 +26,11 @@ body{
 
     .container{
         height: 100vh;
-        max-height: 94vh;
         position: relative;
+
+        @media(max-width: 768px){
+            max-height: 96vh;
+        }
 
         .content_box{
             max-width: 720px;
