--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,27 +2,27 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Dosis", serif;
+    font-family: "Raleway", sans-serif;
     color: #fff;
 }
-// rgb(193, 127, 250)
+
 body{
     height: 100vh;
     overflow: hidden;
-    background-image: url(../img/opt2.jpg);
+    background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center 75%;
     position: relative;
     isolation: isolate;
 
     &::after{
         position: absolute;
         z-index: -1;
-        background-color: #002;
+        background-color: #000;
         inset: 0;
         content: '';
-        opacity: .7;
+        opacity: .6;
     }
 
     .container{
@@ -50,19 +50,19 @@ body{
             }
             
             .upTitle{
-                font-size: 40px;
+                font-size: 32px;
                 font-weight: 400;
                 letter-spacing: 4px;
-                text-shadow: #000 0 1px 2px;
+                text-shadow: #000 0px 4px 2px;
                 
                 @media(max-width: 768px){
                     text-align: center;
                 }
             }
             .mainTitle{
-                font-family: "Dancing Script", serif;
+                font-family: "Abel", sans-serif;
                 font-size: 80px;
-                text-shadow: rgb(193, 127, 250) 0 0 4;
+                text-shadow: #000 0px 4px 2px;
                 
                 @media(max-width: 768px){
                     text-align: center;
@@ -71,14 +71,13 @@ body{
             .description{
                 margin-bottom: 32px;
                 text-align: justify;
-                font-size: 20px;
-                text-shadow: #000 0 1px 2px;
+                text-shadow: #000 0px 4px 2px;
 
                 strong{
                     letter-spacing: 2px;
-                    background-color: rgba($color: white, $alpha: 0.4);
-                    padding: 0 2px;
+                    background-color: rgba(255, 255, 255, 0.2);
                     border-radius: 4px;
+                    padding: 0 2px;
                     cursor: pointer;
                 }
             }
@@ -92,17 +91,17 @@ body{
                 }
 
                 .btn{
-                    border-radius: 8px;
                     background-color: transparent;
                     padding: 8px 32px;
+                    border-radius: 8px;
                     border: solid 2px #fff;
-                    font-size: 20px;
+                    font-size: 16px;
                     cursor: pointer;
                     transition: all ease .3s;
                     
                     &:hover{
                         transform: scale(1.04);
-                        box-shadow: 0 0 8 rgb(193, 127, 250);
+                        box-shadow: 0 0 8 #fff;
                         background: #fff;
                         color: #000;
                     }
@@ -115,7 +114,7 @@ body{
                     }
 
                     &:hover{
-                        background-color: rgb(54, 0, 101);
+                        background-color: #002;
                         
                         a{
                             color: #fff;
@@ -147,50 +146,37 @@ body{
             transform: translate(-50%, -50%);
             max-width: 1280px;
             width: auto;
-            
+
             .projects_box{
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
                 gap: 32px;
-                max-width: 72%;
-                max-height: 68vh;
+                max-width: 90%;
                 margin: 32px auto;
-                padding: 8px 0;
-                overflow-y: auto;
-
-                &::-webkit-scrollbar{
-                    background-color: rgba($color: white, $alpha: 0.4);
-                    border-radius: 4px;
-                    width: 8px;
-
-                    @media(max-width: 768px){
-                        width: 4px;
-                    }
-                }
-                &::-webkit-scrollbar-thumb{
-                    background-color: rgba($color: white, $alpha: 0.8);
-                }
 
                 .projeto{
-                    max-width: 25vh;
+                    max-width: 360px;
                     transition: all ease .3s;
                     text-shadow: 0 0 10 #000;
+                    
+                    a{
+                        text-decoration: none;
 
                         img{
-                            max-width: 280px;
-                            width: 100%;
-                            border: white solid 2px;
-                            border-radius: 8px;
-                            box-shadow: 0 0 4 white;
+                            max-width: 100%;
+                            border-radius: 4px;
                         }
-
+                        p{
+                            margin: 0 auto;
+                        }
+                    }
                     &:hover{
                         transform: scale(1.04);
                     }
 
                     @media(max-width: 768px){
-                        max-width: 64vw;
+                        max-width: 144px;
 
                         p{
                             text-align: center;
@@ -202,6 +188,7 @@ body{
                     gap: 16px;
                 }
             }
+            
             .btn_box{
                 display: flex;
                 justify-content: center;
